--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,21 @@
 buildscript {
     repositories {
         maven { url = 'https://maven.minecraftforge.net' }
+        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
         mavenCentral()
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
+        classpath 'org.spongepowered:mixingradle:0.7.+'
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
-
+apply plugin: 'org.spongepowered.mixin'
 
 version = "0.0.0"
-group = 'github.com.gengyoubo.changedplus' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+group = 'github.com.gengyoubo.changedplus'
 archivesBaseName = 'changedplus'
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
@@ -59,7 +61,7 @@ minecraft {
             property 'forge.logging.markers', 'REGISTRIES'
             property 'forge.logging.console.level', 'debug'
             args '--mod', 'changedplus',
-                    '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
+                 '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
             mods {
                 changedplus {
                     source sourceSets.main
@@ -71,10 +73,6 @@ minecraft {
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 repositories {
   ////
-}
-
-dependencies {
-    minecraft 'net.minecraftforge:forge:1.18.2-40.2.0'
 }
 jar {
     manifest {
@@ -89,16 +87,38 @@ jar {
         ])
     }
 }
-jar.finalizedBy('reobfJar')
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            artifact jar
-        }
+mixin {
+    // 每个源代码集的refmap
+    add sourceSets.main, 'mixins.changedplus.refmap.json'
+
+    // 配置将添加到每个运行配置和Jar
+    config 'mixins.changedplus.json'
+
+    // 指定开发环境运行配置的选项
+    debug.verbose = true
+    debug.export = true
+    dumpTargetOnFailure = true
+
+    // 注解处理器的选项
+    quiet
+}
+
+repositories {
+    flatDir {
+        dirs 'libs'
     }
-    repositories {
-        maven {
-            url "file://${project.projectDir}/mcmodsrepo"
-        }
+    maven {
+        url "https://cursemaven.com"
     }
+    maven {
+        name = "Changed"
+        url = "https://raw.githubusercontent.com/LtxProgrammer/Changed-Minecraft-Mod/master/mcmodsrepo/"
+    }
+}
+
+dependencies {
+    minecraft 'net.minecraftforge:forge:1.18.2-40.2.17'
+    implementation fg.deobf("net.ltxprogrammer.changed:Changed-m1.18.2-f40.2.0:v0.13.1")
+
+    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 }
