--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 apply plugin: 'org.spongepowered.mixin'
 
-version = "0.0.3HappyBirthday"
+version = "0.0.3d"
 group = 'github.com.gengyoubo.changedplus'
 archivesBaseName = 'changedplus'
 
@@ -133,4 +133,17 @@ dependencies {
     implementation fg.deobf("org.embeddedt:embeddium-1.18.2:0.2.11-git.669ff54+mc1.18.2")
     implementation fg.deobf("curse.maven:Oculus-581495:4578744")
     implementation fg.deobf("curse.maven:LSP-387365:3831950" )
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            artifact jar
+        }
+    }
+    repositories {
+        maven {
+            url "file://${project.projectDir}/mcmodsrepo"
+        }
+    }
 }
